--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <label for="nome">Nome:</label>
         <input type="text" id="nome" pattern="([aA-zZ]+)" placeholder="Nome do Cliente" name="nome" required /><br />
 
-        <label for="cpf">CPF:</label>
+        <label for="cpf">RG/CPF:</label>
         <input type="text" id="cpf" name="cpf" size="15"  pattern="\d{3}\.\d{3}\.\d{3}-\d{2}"title="Digite o CPF no formato nnn.nnn.nnn-nn" required /><br />
 
         <label for="endereco">Endereço Evento:</label>
@@ -238,7 +238,7 @@
           pdf.setFontSize(10).setFontType('bold');
           pdf.text("LOCATÁRIO: ", 10, 25);
           pdf.setFontSize(10).setFontType('normal');
-          pdf.text("CPF: " + cpf, 110, 25);
+          pdf.text("RG/CPF: " + cpf, 110, 25);
           pdf.text("E-mail: " + email, 10, 30);
           pdf.text("Telefone: " + telefone, 100, 30);
           pdf.text("Endereço do Evento: " + endereco, 10, 35);
